--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <ul id="unList"></ul>
     
     </div>
+    <div class="chart">
+    <canvas id="myChart"></canvas>
+</div>
 </main>
 
 <footer>
@@ -29,7 +32,7 @@ copy right 2021 &copy;
 </footer>
 
     
-
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="app.js"></script>
 </body>
 </html>
